--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="Take a Hike" />
+     <meta property="og:image" content='../../read-me/quick_preview.gif' />
+     <meta
+       property="og:description"
+       content="Take a Hike is hiking assitant app where you can find/share/rate trails around you, save favorites to your profile, create lists and follow like minded hikers."
+     />
+     <meta
+       property="og:url"
+       content="https://take-a-hike1.herokuapp.com/#/"
+     />
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
