Move gif for preview

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta property="og:title" content="Take a Hike" />
-     <meta property="og:image" content='../../read-me/quick_preview.gif' />
+     <meta property="og:image" content='quick_preview.gif' />
      <meta
        property="og:description"
        content="Take a Hike is hiking assitant app where you can find/share/rate trails around you, save favorites to your profile, create lists and follow like minded hikers."
